May 17, 2024  - **v4.1.1**
                Compatibility with cryoSPARC v4.5.1
                Registering flex particles


April 25, 2024 - **v4.1.0**
                 Tolerating deletion of projects within CS as well as their folders in the file system
                 Add new protocols:
                    * **3D Flex Data Prep**: Prepares particles for use in 3DFlex training and reconstruction. At the same  way,  Takes in a consensus (rigid) refinement density map, plus optionally a segmentation and generates a tetrahedral mesh for 3DFlex.
                    * **3D Flex Mesh Prep**: Takes in a consensus (rigid) refinement density map, plus optionally a segmentation and generates a tetrahedral mesh for 3DFlex. See Mesh Generation below.
                    * **3D Flex Training**: Uses a mesh and prepared particles (at a downsampled resolution) to train a 3DFlex model. Parameters control the number of latent dimensions, size of the model, and training hyperparameters. This job outputs checkpoints during training.
                    * **3D Flex Reconstruction**: Takes in a checkpoint from training as well as prepared high-resolution particles and performs high-resolution refinement using L-BFGS under the 3DFlex model. This is the stage at which improvements to density in high-res regions are computed. Outputs two half-maps that can be used for FSC validation, sharpening, and other downstream tasks.
                 Allowing Scipion to import coordinates


April 2, 2024  - **v4.0.11**
                Compatibility with cryoSPARC v4.4.1 + Patch

Dec 22, 2023    - **v4.0.10**
                Compatibility with cryoSPARC v4.4.1

                Add new protocols:
                 * **3D Variability Analysis**: Protocol to compute the principle modes of variability with a dataset of aligned particles
                 * **3D Variability Display**: Protocol to create various versions of a 3D variability result that can be used for display