@@ -42,6 +42,7 @@ You will need to use `3.0.0 <https://scipion-em.github.io/docs/release-3.0.0/doc
 
  * **new**        Compatibility with cryoSPARC v4.5.1
  * **new**        Registering flex particles
+ * **new**        Integration with FlexUtils plugin
 
 **v4.1.0**
 -----------
