@@ -1,2 +1,3 @@
 scipion-em>=3.0.21
 emtable
+cryosparc-tools==4.5.0
