@@ -1,6 +1,7 @@
 May 17, 2024  - **v4.1.1**
                 Compatibility with cryoSPARC v4.5.1
                 Registering flex particles
+                Integration with FlexUtils plugin
 
 
 April 25, 2024 - **v4.1.0**
